--- a/src/css/GameButtons.css
+++ b/src/css/GameButtons.css
@@ -1,8 +1,6 @@
 .button-modal-container {
   text-align: center;
   position: relative;
-  height: 400px;
-  margin-bottom: -400px;
 }
 
 
@@ -28,13 +26,13 @@
   background: white;
   z-index: 1;
   width: 50%;
-  height: 100%;
+  height: 325px;
   position: absolute;
   right: 0;
   left: 0;
   bottom: 0;
   margin: 0 auto;
-  top: 25%;
+  top: 120px;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -79,9 +77,6 @@
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%)
-}
-
-#close-button-text {
 }
 
 #close-button:hover {
