--- a/src/css/HeartsTable.css
+++ b/src/css/HeartsTable.css
@@ -17,12 +17,12 @@
     text-align: center;
     font-family: "Andale Mono", AndaleMono, monospace;
     font-size: 75px;
-    color: rgb(211, 217, 223);
+    color: white;
     padding-top: 50px;
 }
 
 .start-menu-text:hover {
-    color: white; 
+    filter: brightness(80%);
     font-size: 78px;
 }
 
