--- a/src/css/PlayingCard.css
+++ b/src/css/PlayingCard.css
@@ -17,7 +17,8 @@
 #top-left-suit {
   position: absolute;
 	top: 16%;
-	left: 5%;
+  left: 5%;
+  pointer-events: none;
 }
 
 #top-left-value {
@@ -26,6 +27,7 @@
   left: 9%;
   font-weight: bold;
   font-size: 1em;
+  pointer-events: none;
 }
 
 #bottom-right-suit {
@@ -33,6 +35,7 @@
 	bottom: 16%;
 	right: 5%;
   transform: rotate(180deg);
+  pointer-events: none;
 }
 
 #bottom-right-value {
@@ -42,12 +45,14 @@
   font-weight: bold;
   font-size: 1em;
   transform: rotate(180deg);
+  pointer-events: none;
 }
 
 #large-suit {
   position: absolute;
   top: 31%;
   left: 23%;
+  pointer-events: none;
 }
 
 #back-image {
