Added comments and licensing info to ALL files

--- a/src/css/GameCard.css
+++ b/src/css/GameCard.css
@@ -1,3 +1,9 @@
+/* Cpoyright © 2020 Matthew Heck. All rights reserved.
+
+This file contains all css for the GameCard Component
+
+Created before CIS 482, Updated in US 1/2 */
+
 .deck {
     top: 50%;
     margin-top: -75px;
