--- a/src/css/HeartsTable.css
+++ b/src/css/HeartsTable.css
@@ -1,3 +1,9 @@
+/* Cpoyright © 2020 Matthew Heck. All rights reserved.
+
+This file contains all css for the HeartsTable Component
+
+Created in US 1 */
+
 #game-container {
     position: absolute;
     margin-top: -64px;
