--- a/src/css/PlayingCard.css
+++ b/src/css/PlayingCard.css
@@ -1,3 +1,9 @@
+/* Cpoyright © 2020 Matthew Heck. All rights reserved.
+
+This file contains all css for the PlayingCard Component
+
+Created before CIS 482 */
+
 #playing-card {
   background: white;
   width: 107.25px;
