--- a/src/css/WarTable.css
+++ b/src/css/WarTable.css
@@ -1,3 +1,9 @@
+/* Cpoyright © 2020 Matthew Heck. All rights reserved.
+
+This file contains all css for the WarTable Component
+
+Created before CIS 482 */
+
 #war-game-container {
   text-align: center;
   position: absolute;
