--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,9 @@
+/* Cpoyright © 2020 Matthew Heck. All rights reserved.
+
+This file contains all css for the App Component
+
+Created before CIS 482 */
+
 html, body, #root {
   height: 100%;
   padding: 0px;
