--- a/src/css/Customize.css
+++ b/src/css/Customize.css
@@ -1,3 +1,9 @@
+/* Cpoyright © 2020 Matthew Heck. All rights reserved.
+
+This file contains all css for the Customize Component
+
+Created before CIS 482 */
+
 #customize-menu {
   text-align: center;
   margin: 0;
