--- a/src/css/GameButtons.css
+++ b/src/css/GameButtons.css
@@ -1,3 +1,9 @@
+/* Cpoyright © 2020 Matthew Heck. All rights reserved.
+
+This file contains all css for the GameButtons Component
+
+Created before CIS 482 */
+
 .button-modal-container {
   text-align: center;
   position: relative;
