--- a/src/css/Tabletop.css
+++ b/src/css/Tabletop.css
@@ -1,3 +1,9 @@
+/* Cpoyright © 2020 Matthew Heck. All rights reserved.
+
+This file contains all css for the Tabletop Component
+
+Created before CIS 482 */
+
 #display {
   height: inherit;
 }
