Added testing for Cycle 3, organized testing files

--- a/src/css/HeartsTable.css
+++ b/src/css/HeartsTable.css
@@ -129,6 +129,10 @@ Created in US 1 */
     border-radius: 7px;
     margin-top: 7px;
   }
+
+  #play-button.visible {
+      visibility: visible;
+  }
   
   #play-button:hover {
     background-color: LightGray;
