--- a/src/css/GameCard.css
+++ b/src/css/GameCard.css
@@ -18,7 +18,7 @@ Created before CIS 482, Updated in US 1/2 */
     left: 50%;
     margin-left: -53.625px;
     z-index: 998;
-    transition-duration: .5s;
+    transition-duration: .2s;
 }
 
 
@@ -30,6 +30,7 @@ Created before CIS 482, Updated in US 1/2 */
     top: 50%;
     margin-top: -53.625px;
     z-index: 998;
+    transition-duration: .2s;
 }
 
 .hand3 {
@@ -39,6 +40,8 @@ Created before CIS 482, Updated in US 1/2 */
     left: 50%;
     margin-left: -53.625px;
     z-index: 998;
+    transition-duration: .2s;
+
 }
 
 .hand4 {
@@ -49,9 +52,20 @@ Created before CIS 482, Updated in US 1/2 */
     top: 50%;
     margin-top: -53.625px;
     z-index: 998;
+    transition-duration: .2s;
 }
 
 .hand1.selected {
+    margin-bottom: -25px;
+    transition-duration: .5s;
+}
+
+.hand1.selected1 {
+    margin-bottom: -25px;
+    transition-duration: .5s;
+}
+
+.hand1.selected2 {
     margin-bottom: -25px;
     transition-duration: .5s;
 }
@@ -66,260 +80,260 @@ Created before CIS 482, Updated in US 1/2 */
 
 .hand1.card1 {
     margin-left: -240.125px;
-    z-index: 998;
+    z-index: 1;
 }
 
 .hand1.card2 {
     margin-left: -209.125px;
-    z-index: 998;
+    z-index: 2;
 }
 
 .hand1.card3 {
     margin-left: -178.125px;
-    z-index: 998;
+    z-index: 3;
 }
 
 .hand1.card4 {
     margin-left: -147.125px;
-    z-index: 998;
+    z-index: 4;
 }
 
 .hand1.card5 {
     margin-left: -116.125px;
-    z-index: 998;
+    z-index: 5;
 }
 
 .hand1.card6 {
     margin-left: -85.125px;
-    z-index: 998;
+    z-index: 6;
 }
 
 .hand1.card7 {
     margin-left: -54.125px;
-    z-index: 998;
+    z-index: 7;
 }
 
 .hand1.card8 {
     margin-left: -23.125px;
-    z-index: 998;
+    z-index: 8;
 }
 
 .hand1.card9 {
     margin-left: 7.825px;
-    z-index: 998;
+    z-index: 9;
 }
 
 .hand1.card10 {
     margin-left: 38.825px;
-    z-index: 998;
+    z-index: 10;
 }
 
 .hand1.card11 {
     margin-left: 69.825px;
-    z-index: 998;
+    z-index: 11;
 }
 
 .hand1.card12 {
     margin-left: 100.825px;
-    z-index: 998;
+    z-index: 12;
 }
 
 .hand1.card13 {
     margin-left: 131.825px;
-    z-index: 998;
+    z-index: 13;
 }
 
 .hand2.card1 {
     margin-top: -241.125px;
-    z-index: 998;
+    z-index: 1;
 }
 
 .hand2.card2 {
     margin-top: -209.125px;
-    z-index: 998;
+    z-index: 2;
 }
 
 .hand2.card3 {
     margin-top: -178.125px;
-    z-index: 998;
+    z-index: 3;
 }
 
 .hand2.card4 {
     margin-top: -147.125px;
-    z-index: 998;
+    z-index: 4;
 }
 
 .hand2.card5 {
     margin-top: -116.125px;
-    z-index: 998;
+    z-index: 5;
 }
 
 .hand2.card6 {
     margin-top: -85.125px;
-    z-index: 998;
+    z-index: 6;
 }
 
 .hand2.card7 {
     margin-top: -54.125px;
-    z-index: 998;
+    z-index: 7;
 }
 
 .hand2.card8 {
     margin-top: -23.125px;
-    z-index: 998;
+    z-index: 8;
 }
 
 .hand2.card9 {
     margin-top: 7.825px;
-    z-index: 998;
+    z-index: 9;
 }
 
 .hand2.card10 {
     margin-top: 38.825px;
-    z-index: 998;
+    z-index: 10;
 }
 
 .hand2.card11 {
     margin-top: 69.825px;
-    z-index: 998;
+    z-index: 11;
 }
 
 .hand2.card12 {
     margin-top: 100.825px;
-    z-index: 998;
+    z-index: 12;
 }
 
 .hand2.card13 {
     margin-top: 131.825px;
-    z-index: 998;
+    z-index: 13;
 }
 
-.hand3.card1 {
+.hand3.card13 {
     margin-left: -240.125px;
-    z-index: 998;
+    z-index: 13;
 }
 
-.hand3.card2 {
+.hand3.card12 {
     margin-left: -209.125px;
-    z-index: 998;
+    z-index: 12;
 }
 
-.hand3.card3 {
+.hand3.card11 {
     margin-left: -178.125px;
-    z-index: 998;
+    z-index: 11;
 }
 
-.hand3.card4 {
+.hand3.card10 {
     margin-left: -147.125px;
-    z-index: 998;
+    z-index: 10;
 }
 
-.hand3.card5 {
+.hand3.card9 {
     margin-left: -116.125px;
-    z-index: 998;
+    z-index: 9;
 }
 
-.hand3.card6 {
+.hand3.card8 {
     margin-left: -85.125px;
-    z-index: 998;
+    z-index: 8;
 }
 
 .hand3.card7 {
     margin-left: -54.125px;
-    z-index: 998;
+    z-index: 7;
 }
 
-.hand3.card8 {
+.hand3.card6 {
     margin-left: -23.125px;
-    z-index: 998;
+    z-index: 6;
 }
 
-.hand3.card9 {
+.hand3.card5 {
     margin-left: 7.825px;
-    z-index: 998;
+    z-index: 5;
 }
 
-.hand3.card10 {
+.hand3.card4 {
     margin-left: 38.825px;
-    z-index: 998;
+    z-index: 4;
 }
 
-.hand3.card11 {
+.hand3.card3 {
     margin-left: 69.825px;
-    z-index: 998;
+    z-index: 3;
 }
 
-.hand3.card12 {
+.hand3.card2 {
     margin-left: 100.825px;
-    z-index: 998;
+    z-index: 2;
 }
 
-.hand3.card13 {
+.hand3.card1 {
     margin-left: 131.825px;
-    z-index: 998;
+    z-index: 1;
 }
 
-.hand4.card1 {
+.hand4.card13 {
     margin-top: -240.125px;
-    z-index: 998;
+    z-index: 13;
 }
 
-.hand4.card2 {
+.hand4.card12 {
     margin-top: -209.125px;
-    z-index: 998;
+    z-index: 12;
 }
 
-.hand4.card3 {
+.hand4.card11 {
     margin-top: -178.125px;
-    z-index: 998;
+    z-index: 11;
 }
 
-.hand4.card4 {
+.hand4.card10 {
     margin-top: -147.125px;
-    z-index: 998;
+    z-index: 10;
 }
 
-.hand4.card5 {
+.hand4.card9 {
     margin-top: -116.125px;
-    z-index: 998;
+    z-index: 9;
 }
 
-.hand4.card6 {
+.hand4.card8 {
     margin-top: -85.125px;
-    z-index: 998;
+    z-index: 8;
 }
 
 .hand4.card7 {
     margin-top: -54.125px;
-    z-index: 998;
+    z-index: 7;
 }
 
-.hand4.card8 {
+.hand4.card6 {
     margin-top: -23.125px;
-    z-index: 998;
+    z-index: 6;
 }
 
-.hand4.card9 {
+.hand4.card5 {
     margin-top: 7.825px;
-    z-index: 998;
+    z-index: 5;
 }
 
-.hand4.card10 {
+.hand4.card4 {
     margin-top: 38.825px;
-    z-index: 998;
+    z-index: 4;
 }
 
-.hand4.card11 {
+.hand4.card3 {
     margin-top: 69.825px;
-    z-index: 998;
+    z-index: 3;
 }
 
-.hand4.card12 {
+.hand4.card2 {
     margin-top: 100.825px;
-    z-index: 998;
+    z-index: 2;
 }
 
-.hand4.card13 {
+.hand4.card1 {
     margin-top: 131.825px;
-    z-index: 998;
+    z-index: 1;
 }
