--- a/src/css/GameCard.css
+++ b/src/css/GameCard.css
@@ -115,7 +115,7 @@ Created before CIS 482, Updated in US 1/2 */
 }
 
 #playing-card.unplayable {
-    background: #DCDCDC;
+    background: #BABABA;
 }
 
 
