--- a/src/css/HeartsTable.css
+++ b/src/css/HeartsTable.css
@@ -159,6 +159,16 @@ Created in US 1 */
     font-size: 20px;
 }
 
+#current-winner-text {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: 140px;
+    font-family: "Andale Mono", AndaleMono, monospace;
+    color: white;
+    font-size: 16px;
+}
+
 #pass-button.visible {
     visibility: visible;
 }
