--- a/src/css/HeartsTable.css
+++ b/src/css/HeartsTable.css
@@ -149,6 +149,16 @@ Created in US 1 */
     visibility: visible;
 }
 
+#round-status-message {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: 140px;
+    font-family: "Andale Mono", AndaleMono, monospace;
+    color: white;
+    font-size: 20px;
+}
+
 #round-end-message {
     position: absolute;
     left: 50%;
